Implement edge-to-edge support
This is now required for apps which target sdk 35

--- a/app/src/main/res/layout/app_overview.xml
+++ b/app/src/main/res/layout/app_overview.xml
@@ -10,6 +10,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/layout"
+    android:padding="8dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
