--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -4,24 +4,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.MainActivity"
-    android:background="@android:color/transparent"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/app_bar_layout"
-        android:fitsSystemWindows="true">
+        android:id="@+id/app_bar_layout">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:background="@color/colorActionBar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
             android:theme="@style/AppBarOverlay"
             app:popupTheme="@style/PopupOverlay" />
-
     </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
