--- a/app/src/main/res/layout/connections.xml
+++ b/app/src/main/res/layout/connections.xml
@@ -7,15 +7,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
+        android:id="@+id/linearlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/old_connections_notice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:textSize="15sp"
+            android:textStyle="italic"
+            android:visibility="gone"
+            tools:visibility="visible"
+            tools:text="74 older connections not shown" />
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/active_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="4dp"
+            android:visibility="gone"
             app:singleSelection="true">
         </com.google.android.material.chip.ChipGroup>
 
@@ -39,17 +52,6 @@
             android:scrollbars="vertical"
             android:scrollbarStyle="outsideOverlay"
             android:fillViewport="true" />
-
-        <TextView
-            android:id="@+id/old_connections_notice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:textSize="15sp"
-            android:textStyle="italic"
-            android:visibility="gone"
-            tools:visibility="visible"
-            tools:text="74 older connections not shown" />
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
