--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -10,7 +10,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/main_screen"
+        layout="@layout/tabs_activity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
