--- a/app/src/main/res/menu/connection_context_menu.xml
+++ b/app/src/main/res/menu/connection_context_menu.xml
@@ -66,6 +66,12 @@
                 android:title=""
                 tools:title="@string/host_val"
                 android:visible="false" />
+
+            <item
+                android:id="@+id/block_country"
+                android:title=""
+                tools:title="@string/country_val"
+                android:visible="false" />
         </menu>
     </item>
 
@@ -108,6 +114,12 @@
                 android:id="@+id/unblock_domain"
                 android:title=""
                 tools:title="@string/host_val"
+                android:visible="false" />
+
+            <item
+                android:id="@+id/unblock_country"
+                android:title=""
+                tools:title="@string/country_val"
                 android:visible="false" />
         </menu>
     </item>
