Implement CIDR support
It's now possible to specify IP addresses in the CIDR format
for rules. This allows to block by CIDR

Closes #365

--- a/app/src/main/res/menu/list_edit_menu.xml
+++ b/app/src/main/res/menu/list_edit_menu.xml
@@ -26,7 +26,7 @@
                 android:visible="false" />
             <item
                 android:id="@+id/add_ip"
-                android:title="@string/ip_address"
+                android:title="@string/ip_address_or_cidr"
                 android:visible="false" />
             <item
                 android:id="@+id/add_proto"
