--- a/app/src/main/res/layout/connections.xml
+++ b/app/src/main/res/layout/connections.xml
@@ -32,6 +32,21 @@
             app:singleSelection="true">
         </com.google.android.material.chip.ChipGroup>
 
+        <com.google.android.material.slider.Slider
+            android:id="@+id/size_slider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:thumbColor="@color/colorAccent"
+            app:trackColorActive="@color/colorAccent"
+            app:trackColorInactive="@color/colorAccentLight"
+            app:labelBehavior="visible"
+            android:valueFrom="0"
+            android:valueTo="1024"
+            android:stepSize="1"
+            android:visibility="gone"
+            tools:value="100"
+            tools:valueTo="1024"/>
+
         <TextView
             android:id="@+id/no_connections"
             android:layout_width="match_parent"
