--- a/app/src/main/res/layout/connection_overview.xml
+++ b/app/src/main/res/layout/connection_overview.xml
@@ -48,13 +48,30 @@
                 android:layout_weight="0.25"
                 android:textStyle="bold"
                 android:text="@string/protocol" />
-            <TextView
-                android:id="@+id/detail_protocol"
+
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="0.75"
-                android:textIsSelectable="true"
-                tools:text="TLS (TCP)" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/detail_protocol"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textIsSelectable="true"
+                    tools:text="TLS (TCP)" />
+
+                <ImageView
+                    android:id="@+id/protocol_info"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
+                    tools:visibility="visible"
+                    android:paddingTop="1sp"
+                    android:src="@drawable/ic_info" />
+            </LinearLayout>
         </TableRow>
 
         <TableRow
